--- a/index.css
+++ b/index.css
@@ -1,4 +1,50 @@
-#heading {
-  color: violet;
-  background-color: green;
+/* bfdbf7 */
+/* e1e5f2 */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+  height: 100px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  background-color: #693416;
+  color: white;
+}
+
+.logo-img {
+  width: 100px;
+  border-radius: 20%;
+  background-color: #e1e5f2;
+}
+
+.nav-items > ul {
+  display: flex;
+  list-style: none;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  font-size: 25px;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.res-card {
+  width: 200px;
+  height: 400px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #e1e5f2;
+}
+
+.res-card:hover {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
+.res-logo {
+  width: 100%;
 }
